# log-utility-cpp

./: .gitattributes  .pre-commit-config.yaml  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cicd.yml  codeql.yml  documentation.yml  macos.yml  ubuntu.yml  windows.yml
app/: CMakeLists.txt  config.json  main.cpp
docs/: Doxyfile
src/: CMakeLists.txt
src/azure_uploader/: CMakeLists.txt  azure_uploader.cpp  azure_uploader.hpp
src/bar/: CMakeLists.txt  bar.cpp
src/config_parser/: CMakeLists.txt  config_parser.cpp  config_parser.hpp
src/foo/: CMakeLists.txt  foo.cpp
src/metric_collector/: CMakeLists.txt  metric_collector.cpp  metric_collector.hpp
src/metric_provider/: CMakeLists.txt  metric_provider.cpp  metric_provider.hpp
tests/: CMakeLists.txt  test_bar.cpp  test_foo.cpp
tools/: run-clang-format.py
